# exploring_rust

./: .gitignore  README.md  audit.json
exp_bend_lang/: fusing_add.bend  tree.bend
opencv_exps/: Cargo.toml
tauri_exps/: index.html  package-lock.json  package.json
tauri_exps/src-tauri/: Cargo.toml  tauri.conf.json
tauri_exps/src-tauri/src/: main.rs  phi3.rs
vector_db_exps/: Cargo.toml
vector_db_rust_scratch/: Cargo.toml
vector_db_rust_scratch/src/: main.rs
warp_api/: Cargo.toml
warp_api/src/: main.rs
wasm-gameoflife/: Cargo.toml  LICENSE_MIT
wasm-gameoflife/src/: lib.rs
wasm-gameoflife/tests/: web.rs
webgpu_tuts/: Cargo.toml
websocket_tinker/: Cargo.toml  audit.json
websocket_tinker/src/handlers/: subscriber.rs
